--- a/plays/uninstall.yml
+++ b/plays/uninstall.yml
@@ -2,9 +2,9 @@
 # Uninstall role
 # Run prior to removing host from inventory groups, so hostvars are accessible
 ---
-- name: template | uninstall
+- name: kopia | uninstall
   hosts: all
   tasks:
   - include_role:
-      name: template
+      name: kopia
       tasks_from: uninstall.yml
